Specify zip file name in unzip action
Updated the unzip command to use the correct ZIP file name

--- a/.github/workflows/unzip.yml
+++ b/.github/workflows/unzip.yml
@@ -14,7 +14,7 @@ jobs:
 
       - name: Unzip uploaded file
         run: |
-          unzip -o '*.zip' -d .
+          unzip -o 'skytrust-portal-extracted.zip' -d .
 
       - name: Commit unzipped files
         run: |
