--- a/.github/workflows/unzip.yml
+++ b/.github/workflows/unzip.yml
@@ -14,7 +14,7 @@ jobs:
 
       - name: Unzip uploaded file
         run: |
-          unzip -o 'skytrust-portal-extracted.zip' -d .
+          unzip -o 'skytrust-portal.zip' -d .
 
       - name: Commit unzipped files
         run: |
